Update LinkedIn profile link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <p><i class="fas fa-envelope"></i> <a href="mailto:abidshariff009@gmail.com">abidshariff009@gmail.com</a></p>
                         <p><i class="fas fa-phone"></i> <a href="tel:+17169709249">(716) 970-9249</a></p>
                         <p><i class="fas fa-map-marker-alt"></i> Dallas, Texas, 76210, United States</p>
-                        <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/abid" target="_blank">LinkedIn</a></p>
+                        <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/abid-shaik-92693b52/" target="_blank">LinkedIn</a></p>
                     </div>
                 </div>
             </div>
