Update work experience with Q CLI agentic AI utility

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <p class="location">Dallas, United States</p>
                     <ul>
-                        <li>Trained LLMs in AWS Bedrock to build an AI assistant that integrated inputs from internal wiki documents and data from Redshift and DynamoDB, providing self-service analytic and data discovery capabilities.</li>
+                        <li>Built an automated agentic AI utility using Q CLI which streamlined the process of data ingestion to a central data platform, reducing the development effort by 90%.</li>
                         <li>Designed and implemented real-time analytic solutions that transformed the workload management for over a million hourly associates worldwide.</li>
                         <li>Developed the data model for a centralized metrics library containing over 200 core recruiting metrics, which eliminated data integrity issues and improved accuracy for executive reporting.</li>
                         <li>Played a pivotal role in migrating a critical data reporting system to a modern micro-services architecture, addressing challenges, resolving blockers, and ensuring smooth transitions to new platforms.</li>
