Add profile image

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
             </nav>
             <div class="profile">
                 <div class="profile-image">
-                    <!-- Profile image placeholder -->
-                    <div class="image-placeholder">
-                        <i class="fas fa-user"></i>
-                    </div>
+                    <img src="profile-image.jpeg" alt="Abid Shaik">
                 </div>
                 <div class="profile-content">
                     <h1>ABID SHAIK</h1>
