Update agentic AI utility description to match style of other experience points

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <p class="location">Dallas, United States</p>
                     <ul>
-                        <li>Built an automated agentic AI utility using Q CLI which streamlined the process of data ingestion to a central data platform, reducing the development effort by 90%.</li>
+                        <li>Developed an automated agentic AI utility using Q CLI that streamlined data ingestion processes to a central data platform, resulting in a 90% reduction in development effort and significantly accelerating project delivery timelines.</li>
                         <li>Designed and implemented real-time analytic solutions that transformed the workload management for over a million hourly associates worldwide.</li>
                         <li>Developed the data model for a centralized metrics library containing over 200 core recruiting metrics, which eliminated data integrity issues and improved accuracy for executive reporting.</li>
                         <li>Played a pivotal role in migrating a critical data reporting system to a modern micro-services architecture, addressing challenges, resolving blockers, and ensuring smooth transitions to new platforms.</li>
