--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark/light mode">
+        <i class="fas fa-moon"></i>
+    </button>
+
     <header>
         <div class="container">
             <nav class="nav-menu">
@@ -18,6 +22,7 @@
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#education">Education</a></li>
                     <li><a href="#certifications">Certifications</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="profile">
@@ -40,72 +45,129 @@
 
     <main>
         <div class="container">
-            <section id="about" class="about">
+            <section id="about" class="about hidden">
                 <h2>Summary</h2>
                 <p>As a Senior Data Engineer at Amazon on the Workforce Intelligence team, I play a key role in delivering critical analytics that empower our Talent Acquisition team to enhance features within Amazon's internal hiring platforms. I build centralized data platforms that are used daily by thousands of users - recruiting coordinators, hiring managers, and senior executives - to improve the candidate experience and reduce hiring costs. Additionally, I've designed and implemented real-time analytics solutions that have optimized workload management for over a million hourly associates globally. My work also includes developing reusable solutions to streamline batch and real-time data transformation pipelines, providing self-service analytics for stakeholders.</p>
             </section>
 
-            <section id="skills" class="skills">
+            <section id="skills" class="skills hidden">
                 <h2>Skills</h2>
                 <div class="skills-container">
                     <div class="skill-category">
                         <h3>Cloud Platform</h3>
                         <ul>
-                            <li>AWS</li>
+                            <li>
+                                AWS
+                                <div class="skill-bar"><div class="skill-progress" data-width="95"></div></div>
+                            </li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3>Scripting Languages</h3>
                         <ul>
-                            <li>Python</li>
-                            <li>SQL</li>
-                            <li>Pyspark</li>
-                            <li>Scala</li>
-                            <li>Java</li>
-                            <li>Unix</li>
+                            <li>
+                                Python
+                                <div class="skill-bar"><div class="skill-progress" data-width="90"></div></div>
+                            </li>
+                            <li>
+                                SQL
+                                <div class="skill-bar"><div class="skill-progress" data-width="95"></div></div>
+                            </li>
+                            <li>
+                                Pyspark
+                                <div class="skill-bar"><div class="skill-progress" data-width="85"></div></div>
+                            </li>
+                            <li>
+                                Scala
+                                <div class="skill-bar"><div class="skill-progress" data-width="80"></div></div>
+                            </li>
+                            <li>
+                                Java
+                                <div class="skill-bar"><div class="skill-progress" data-width="75"></div></div>
+                            </li>
+                            <li>
+                                Unix
+                                <div class="skill-bar"><div class="skill-progress" data-width="85"></div></div>
+                            </li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3>Big Data Tech</h3>
                         <ul>
-                            <li>Hadoop</li>
-                            <li>Spark</li>
+                            <li>
+                                Hadoop
+                                <div class="skill-bar"><div class="skill-progress" data-width="85"></div></div>
+                            </li>
+                            <li>
+                                Spark
+                                <div class="skill-bar"><div class="skill-progress" data-width="90"></div></div>
+                            </li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3>Visualization Tools</h3>
                         <ul>
-                            <li>Amazon QuickSight</li>
-                            <li>Tableau</li>
-                            <li>Cognos</li>
+                            <li>
+                                Amazon QuickSight
+                                <div class="skill-bar"><div class="skill-progress" data-width="90"></div></div>
+                            </li>
+                            <li>
+                                Tableau
+                                <div class="skill-bar"><div class="skill-progress" data-width="85"></div></div>
+                            </li>
+                            <li>
+                                Cognos
+                                <div class="skill-bar"><div class="skill-progress" data-width="80"></div></div>
+                            </li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3>Database Management</h3>
                         <ul>
-                            <li>PostgreSQL</li>
-                            <li>MySQL</li>
-                            <li>MongoDB</li>
-                            <li>Oracle</li>
+                            <li>
+                                PostgreSQL
+                                <div class="skill-bar"><div class="skill-progress" data-width="90"></div></div>
+                            </li>
+                            <li>
+                                MySQL
+                                <div class="skill-bar"><div class="skill-progress" data-width="85"></div></div>
+                            </li>
+                            <li>
+                                MongoDB
+                                <div class="skill-bar"><div class="skill-progress" data-width="80"></div></div>
+                            </li>
+                            <li>
+                                Oracle
+                                <div class="skill-bar"><div class="skill-progress" data-width="85"></div></div>
+                            </li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3>Orchestration Tools</h3>
                         <ul>
-                            <li>Apache Airflow</li>
+                            <li>
+                                Apache Airflow
+                                <div class="skill-bar"><div class="skill-progress" data-width="90"></div></div>
+                            </li>
                         </ul>
                     </div>
                     <div class="skill-category">
                         <h3>ETL Tools</h3>
                         <ul>
-                            <li>Informatica Powercenter</li>
-                            <li>Informatica Cloud</li>
+                            <li>
+                                Informatica Powercenter
+                                <div class="skill-bar"><div class="skill-progress" data-width="85"></div></div>
+                            </li>
+                            <li>
+                                Informatica Cloud
+                                <div class="skill-bar"><div class="skill-progress" data-width="80"></div></div>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </section>
 
-            <section id="experience" class="experience">
+            <section id="experience" class="experience hidden">
                 <h2>Work Experience</h2>
                 <div class="job">
                     <h3>Sr. Data Engineer</h3>
@@ -170,7 +232,7 @@
                 </div>
             </section>
 
-            <section id="education" class="education">
+            <section id="education" class="education hidden">
                 <h2>Education</h2>
                 <div class="education-item">
                     <h3>Masters in Information Systems</h3>
@@ -190,7 +252,7 @@
                 </div>
             </section>
 
-            <section id="certifications" class="certifications">
+            <section id="certifications" class="certifications hidden">
                 <h2>Certifications</h2>
                 <ul>
                     <li>AWS Data Engineer (Associate) - Amazon Web Services</li>
@@ -198,11 +260,40 @@
                     <li>AWS Cloud Practitioner - Amazon Web Services</li>
                 </ul>
             </section>
+
+            <section id="contact" class="contact hidden">
+                <h2>Get In Touch</h2>
+                <p>Interested in working together? Feel free to reach out using the form below or through my contact information above.</p>
+                <form class="contact-form" id="contactForm">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <input type="text" id="subject" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" class="form-control" required></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </section>
         </div>
     </main>
 
     <footer>
         <div class="container">
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/abid-shaik-92693b52/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/abidshariff" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="mailto:abidshariff009@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+            </div>
             <p>&copy; <span class="current-year">2025</span> Abid Shaik - Senior Data Engineer</p>
         </div>
     </footer>
