Improved website design with better layout and smoother animations

--- a/index.html
+++ b/index.html
@@ -97,28 +97,42 @@
             </div>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Sr. Data Engineer</h3>
-                        <h4>Amazon</h4>
-                        <p class="timeline-date">December 2020 - Present</p>
-                        <p class="timeline-location">Dallas, United States</p>
+                        <div class="timeline-header">
+                            <div>
+                                <h3>Sr. Data Engineer</h3>
+                                <h4>Amazon</h4>
+                            </div>
+                            <div class="timeline-meta">
+                                <p class="timeline-date">December 2020 - Present</p>
+                                <p class="timeline-location">Dallas, United States</p>
+                            </div>
+                        </div>
                         <ul>
                             <li>Developed an automated agentic AI utility using Q CLI that streamlined data ingestion processes to a central data platform, resulting in a 90% reduction in development effort and significantly accelerating project delivery timelines.</li>
                             <li>Designed and implemented real-time analytic solutions that transformed the workload management for over a million hourly associates worldwide.</li>
                             <li>Developed the data model for a centralized metrics library containing over 200 core recruiting metrics, which eliminated data integrity issues and improved accuracy for executive reporting.</li>
                             <li>Played a pivotal role in migrating a critical data reporting system to a modern micro-services architecture, addressing challenges, resolving blockers, and ensuring smooth transitions to new platforms.</li>
                             <li>Led a cross-functional team to create an innovative case management tool that significantly improved user experience, earning leadership recognition for creativity and efficiency.</li>
+                            <li>Spearheaded process improvements, including developing run-books and checklists, which resulted in a 30% reduction in operational tickets and improved overall service reliability.</li>
+                            <li>Designed and implemented a custom maintenance utility for a large-scale data platform, reducing system costs by 50% and improving platform stability.</li>
+                            <li>Developed an automation framework that reduced time-to-market for new data pipelines by 70%, increasing team efficiency and responsiveness to business needs.</li>
+                            <li>Designed and implemented security protocols that improved the ability to respond to incidents quickly, ensuring data protection and compliance with organizational standards.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Data Engineer</h3>
-                        <h4>CGI</h4>
-                        <p class="timeline-date">June 2015 - December 2020</p>
-                        <p class="timeline-location">Boston, United States</p>
+                        <div class="timeline-header">
+                            <div>
+                                <h3>Data Engineer</h3>
+                                <h4>CGI</h4>
+                            </div>
+                            <div class="timeline-meta">
+                                <p class="timeline-date">June 2015 - December 2020</p>
+                                <p class="timeline-location">Boston, United States</p>
+                            </div>
+                        </div>
                         <ul>
                             <li>Designed and implemented AWS systems in line with compliance and security standards, reducing security risks by 40% and improving system reliability for business-critical applications.</li>
                             <li>Built and deployed scalable, fault-tolerant environments that enhanced application uptime by 30%, enabling more consistent and accessible data workflows for teams.</li>
@@ -128,12 +142,17 @@
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>ETL Analyst</h3>
-                        <h4>Tech Mahindra</h4>
-                        <p class="timeline-date">February 2013 - July 2014</p>
-                        <p class="timeline-location">Hyderabad, India</p>
+                        <div class="timeline-header">
+                            <div>
+                                <h3>ETL Analyst</h3>
+                                <h4>Tech Mahindra</h4>
+                            </div>
+                            <div class="timeline-meta">
+                                <p class="timeline-date">February 2013 - July 2014</p>
+                                <p class="timeline-location">Hyderabad, India</p>
+                            </div>
+                        </div>
                         <ul>
                             <li>Built a decision support model for Insurance policies, which reduced the cost of Insurance claims by 35%.</li>
                             <li>Published customized interactive reports and dashboards using Tableau Server.</li>
@@ -143,12 +162,17 @@
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Systems Engineer</h3>
-                        <h4>Infosys</h4>
-                        <p class="timeline-date">October 2010 - October 2012</p>
-                        <p class="timeline-location">Hyderabad, India</p>
+                        <div class="timeline-header">
+                            <div>
+                                <h3>Systems Engineer</h3>
+                                <h4>Infosys</h4>
+                            </div>
+                            <div class="timeline-meta">
+                                <p class="timeline-date">October 2010 - October 2012</p>
+                                <p class="timeline-location">Hyderabad, India</p>
+                            </div>
+                        </div>
                         <ul>
                             <li>Managed current and historical financial transactions of a multinational bank using Informatica and Oracle DB.</li>
                             <li>Designed and developed various OBIEE Interactive Dashboards and reports with drill-downs, guided navigation, filters, and prompts.</li>
