Add collapsible AWS section with detailed services

--- a/index.html
+++ b/index.html
@@ -195,10 +195,33 @@
             <div class="skills-container">
                 <div class="skill-category">
                     <h3>Cloud Platform</h3>
-                    <div class="skill-item">
-                        <div class="skill-name">AWS</div>
-                        <div class="skill-bar">
-                            <div class="skill-per" per="95%"></div>
+                    <div class="skill-item collapsible-skill">
+                        <div class="skill-header">
+                            <div class="skill-name">AWS</div>
+                            <div class="skill-bar">
+                                <div class="skill-per" per="95%"></div>
+                            </div>
+                            <div class="collapse-icon"><i class="fas fa-chevron-down"></i></div>
+                        </div>
+                        <div class="skill-details">
+                            <ul class="aws-services">
+                                <li>Lambda</li>
+                                <li>EC2</li>
+                                <li>Glue</li>
+                                <li>Bedrock</li>
+                                <li>S3</li>
+                                <li>Redshift</li>
+                                <li>DynamoDB</li>
+                                <li>Athena</li>
+                                <li>EMR</li>
+                                <li>Step Functions</li>
+                                <li>CloudWatch</li>
+                                <li>IAM</li>
+                                <li>Kinesis</li>
+                                <li>SQS</li>
+                                <li>SNS</li>
+                                <li>QuickSight</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
