Remove Abid title, add Q CLI mention, and add GenAI skill section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="#home">Abid<span>.</span></a>
+                    <span class="developed-by">Developed with <i class="fas fa-robot"></i> Q CLI</span>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#home" class="active">Home</a></li>
@@ -278,6 +278,37 @@
                         <div class="skill-name">Spark</div>
                         <div class="skill-bar">
                             <div class="skill-per" per="90%"></div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="skill-category">
+                    <h3>GenAI</h3>
+                    <div class="skill-item collapsible-skill">
+                        <div class="skill-header">
+                            <div class="skill-name">Generative AI</div>
+                            <div class="skill-bar">
+                                <div class="skill-per" per="90%"></div>
+                            </div>
+                            <div class="collapse-icon"><i class="fas fa-chevron-down"></i></div>
+                        </div>
+                        <div class="skill-details">
+                            <ul class="aws-services">
+                                <li>Amazon Bedrock</li>
+                                <li>Amazon Q</li>
+                                <li>SageMaker JumpStart</li>
+                                <li>Amazon Titan</li>
+                                <li>Claude</li>
+                                <li>Stable Diffusion</li>
+                                <li>Amazon Lex</li>
+                                <li>Amazon Kendra</li>
+                                <li>Amazon Comprehend</li>
+                                <li>Amazon Textract</li>
+                                <li>Amazon Rekognition</li>
+                                <li>Amazon Polly</li>
+                                <li>LangChain</li>
+                                <li>Hugging Face</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
