Move GenAI section to first position and update content, add MWAA to AWS

--- a/index.html
+++ b/index.html
@@ -194,6 +194,31 @@
             </div>
             <div class="skills-container">
                 <div class="skill-category">
+                    <h3>GenAI</h3>
+                    <div class="skill-item collapsible-skill">
+                        <div class="skill-header">
+                            <div class="skill-name">Generative AI</div>
+                            <div class="skill-bar">
+                                <div class="skill-per" per="90%"></div>
+                            </div>
+                            <div class="collapse-icon"><i class="fas fa-chevron-down"></i></div>
+                        </div>
+                        <div class="skill-details">
+                            <ul class="aws-services">
+                                <li>Amazon Bedrock</li>
+                                <li>Q Developer</li>
+                                <li>Agentic AI (Q CLI, Gemini CLI)</li>
+                                <li>Amazon Kendra</li>
+                                <li>Amazon Titan</li>
+                                <li>Amazon Polly</li>
+                                <li>Amazon Lex</li>
+                                <li>Amazon Comprehend</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="skill-category">
                     <h3>Cloud Platform</h3>
                     <div class="skill-item collapsible-skill">
                         <div class="skill-header">
@@ -221,6 +246,7 @@
                                 <li>SQS</li>
                                 <li>SNS</li>
                                 <li>QuickSight</li>
+                                <li>MWAA</li>
                             </ul>
                         </div>
                     </div>
@@ -278,37 +304,6 @@
                         <div class="skill-name">Spark</div>
                         <div class="skill-bar">
                             <div class="skill-per" per="90%"></div>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="skill-category">
-                    <h3>GenAI</h3>
-                    <div class="skill-item collapsible-skill">
-                        <div class="skill-header">
-                            <div class="skill-name">Generative AI</div>
-                            <div class="skill-bar">
-                                <div class="skill-per" per="90%"></div>
-                            </div>
-                            <div class="collapse-icon"><i class="fas fa-chevron-down"></i></div>
-                        </div>
-                        <div class="skill-details">
-                            <ul class="aws-services">
-                                <li>Amazon Bedrock</li>
-                                <li>Amazon Q</li>
-                                <li>SageMaker JumpStart</li>
-                                <li>Amazon Titan</li>
-                                <li>Claude</li>
-                                <li>Stable Diffusion</li>
-                                <li>Amazon Lex</li>
-                                <li>Amazon Kendra</li>
-                                <li>Amazon Comprehend</li>
-                                <li>Amazon Textract</li>
-                                <li>Amazon Rekognition</li>
-                                <li>Amazon Polly</li>
-                                <li>LangChain</li>
-                                <li>Hugging Face</li>
-                            </ul>
                         </div>
                     </div>
                 </div>
