Add GenAI experience to About Me section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <p>As a Senior Data Engineer at Amazon on the Workforce Intelligence team, I play a key role in delivering critical analytics that empower our Talent Acquisition team to enhance features within Amazon's internal hiring platforms.</p>
                     <p>I build centralized data platforms that are used daily by thousands of users - recruiting coordinators, hiring managers, and senior executives - to improve the candidate experience and reduce hiring costs.</p>
                     <p>Additionally, I've designed and implemented real-time analytics solutions that have optimized workload management for over a million hourly associates globally. My work also includes developing reusable solutions to streamline batch and real-time data transformation pipelines, providing self-service analytics for stakeholders.</p>
+                    <p>I am a key player in improving team productivity through innovative agentic AI solutions, leveraging tools like Amazon Q CLI to automate complex workflows and reduce development effort by up to 90% while accelerating project delivery timelines.</p>
                     <div class="personal-info">
                         <div class="info-item">
                             <span>Name:</span>
