Add download resume button with PDF file

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <div class="hero-btns">
                         <a href="#contact" class="btn primary-btn">Contact Me</a>
                         <a href="#experience" class="btn secondary-btn">View My Work</a>
+                        <a href="Abid_Shaik_Resume.pdf" class="btn download-btn" download><i class="fas fa-download"></i> Download Resume</a>
                     </div>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/abid-shaik-92693b52/" target="_blank"><i class="fab fa-linkedin"></i></a>
