Update download resume button to be smaller with hover text and use original docx file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
                     <div class="hero-btns">
                         <a href="#contact" class="btn primary-btn">Contact Me</a>
                         <a href="#experience" class="btn secondary-btn">View My Work</a>
-                        <a href="Abid_Shaik_Resume.pdf" class="btn download-btn" download><i class="fas fa-download"></i> Download Resume</a>
+                    </div>
+                    <div class="download-resume-container">
+                        <a href="Abid_Shaik_Resume.docx" class="download-resume-btn" download title="Download Resume">
+                            <i class="fas fa-file-download"></i>
+                            <span class="download-text">Download Resume</span>
+                        </a>
                     </div>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/abid-shaik-92693b52/" target="_blank"><i class="fab fa-linkedin"></i></a>
