--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="#experience" class="btn secondary-btn">View My Work</a>
                     </div>
                     <div class="download-resume-container">
-                        <a href="Abid_Shaik_Resume.docx" class="download-resume-btn" download title="Download Resume">
+                        <a href="Abid_Shaik_Resume.pdf" class="download-resume-btn" download title="Download Resume">
                             <i class="fas fa-file-download"></i>
                             <span class="download-text">Download Resume</span>
                         </a>
