--- a/index.html
+++ b/index.html
@@ -36,19 +36,26 @@
                     <h2>Senior Data Engineer</h2>
                     <p>Specializing in data platforms, analytics, and cloud solutions</p>
                     <div class="hero-btns">
-                        <a href="#contact" class="btn primary-btn">Contact Me</a>
+                        <a href="#contact" class="btn secondary-btn">Contact Me</a>
                         <a href="#experience" class="btn secondary-btn">View My Work</a>
                     </div>
-                    <div class="download-resume-container">
-                        <a href="Abid_Shaik_Resume.pdf" class="download-resume-btn" download title="Download Resume">
-                            <i class="fas fa-file-download"></i>
-                            <span class="download-text">Download Resume</span>
-                        </a>
-                    </div>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/abid-shaik-92693b52/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/abidshariff" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="mailto:abidshariff009@gmail.com"><i class="fas fa-envelope"></i></a>
+                        <a href="https://www.linkedin.com/in/abid-shaik-92693b52/" target="_blank" class="social-icon-link">
+                            <i class="fab fa-linkedin"></i>
+                            <span class="icon-text">LinkedIn</span>
+                        </a>
+                        <a href="https://github.com/abidshariff" target="_blank" class="social-icon-link">
+                            <i class="fab fa-github"></i>
+                            <span class="icon-text">GitHub</span>
+                        </a>
+                        <a href="mailto:abidshariff009@gmail.com" class="social-icon-link">
+                            <i class="fas fa-envelope"></i>
+                            <span class="icon-text">Email</span>
+                        </a>
+                        <a href="Abid_Shaik_Resume.pdf" class="social-icon-link" download title="Download Resume">
+                            <i class="fas fa-file-download"></i>
+                            <span class="icon-text">Resume</span>
+                        </a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -513,9 +520,18 @@
             <div class="footer-content">
                 <p>&copy; <span class="current-year">2025</span> Abid Shaik. All Rights Reserved.</p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/abid-shaik-92693b52/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/abidshariff" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="mailto:abidshariff009@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/abid-shaik-92693b52/" target="_blank" class="social-icon-link">
+                        <i class="fab fa-linkedin"></i>
+                        <span class="icon-text">LinkedIn</span>
+                    </a>
+                    <a href="https://github.com/abidshariff" target="_blank" class="social-icon-link">
+                        <i class="fab fa-github"></i>
+                        <span class="icon-text">GitHub</span>
+                    </a>
+                    <a href="mailto:abidshariff009@gmail.com" class="social-icon-link">
+                        <i class="fas fa-envelope"></i>
+                        <span class="icon-text">Email</span>
+                    </a>
                 </div>
             </div>
         </div>
