Replace company names with actual logos

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
                         <div class="timeline-header">
                             <div>
                                 <h3>Sr. Data Engineer</h3>
-                                <h4><i class="fab fa-amazon"></i> Amazon</h4>
+                                <div class="company-logo">
+                                    <img src="images/amazon-logo.png" alt="Amazon Logo">
+                                </div>
                             </div>
                             <div class="timeline-meta">
                                 <p class="timeline-date">December 2020 - Present</p>
@@ -139,7 +141,9 @@
                         <div class="timeline-header">
                             <div>
                                 <h3>Data Engineer</h3>
-                                <h4><i class="fas fa-building"></i> CGI</h4>
+                                <div class="company-logo">
+                                    <img src="images/cgi-logo.png" alt="CGI Logo">
+                                </div>
                             </div>
                             <div class="timeline-meta">
                                 <p class="timeline-date">June 2015 - December 2020</p>
@@ -159,7 +163,9 @@
                         <div class="timeline-header">
                             <div>
                                 <h3>ETL Analyst</h3>
-                                <h4><i class="fas fa-cogs"></i> Tech Mahindra</h4>
+                                <div class="company-logo">
+                                    <img src="images/tech-mahindra-logo.png" alt="Tech Mahindra Logo">
+                                </div>
                             </div>
                             <div class="timeline-meta">
                                 <p class="timeline-date">February 2013 - July 2014</p>
@@ -179,7 +185,9 @@
                         <div class="timeline-header">
                             <div>
                                 <h3>Systems Engineer</h3>
-                                <h4><i class="fas fa-laptop-code"></i> Infosys</h4>
+                                <div class="company-logo">
+                                    <img src="images/infosys-logo.png" alt="Infosys Logo">
+                                </div>
                             </div>
                             <div class="timeline-meta">
                                 <p class="timeline-date">October 2010 - October 2012</p>
