Fixed image centering within decorative circles using image-container

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="profile-image.jpeg" alt="Abid Shaik">
+                    <div class="image-container">
+                        <img src="profile-image.jpeg" alt="Abid Shaik">
+                    </div>
                 </div>
             </div>
         </div>
