Completely redesigned image and circles positioning with actual elements instead of pseudo-elements

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
+                        <div class="circle-outer"></div>
+                        <div class="circle-inner"></div>
                         <img src="profile-image.jpeg" alt="Abid Shaik">
                     </div>
                 </div>
